syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.honnix.kheos.proto.base.v1";
option java_outer_classname = "KheosProtoBase";
option objc_class_prefix = "KHEOS";

package kheos.proto.base.v1;

enum Result {
    success = 0;
    fail = 1;
}

message Heos {
    string command = 1;
    Result result = 2;
    string message = 3;
}

message HeosResponse {
    Heos heos = 1;
}

message Empty {
}

enum OptionId {
    reserved 9 to 10, 14 to 18;
    UNUSED_OPTION = 0;
    ADD_TRACK_TO_LIBRARY = 1;
    ADD_ALBUM_TO_LIBRARY = 2;
    ADD_STATION_TO_LIBRARY = 3;
    ADD_PLAYLIST_TO_LIBRARY = 4;
    REMOVE_TRACK_FROM_LIBRARY = 5;
    REMOVE_ALBUM_FROM_LIBRARY = 6;
    REMOVE_STATION_FROM_LIBRARY = 7;
    REMOVE_PLAYLIST_FROM_LIBRARY = 8;
    THUMBS_UP = 11;
    THUMBS_DOWN = 12;
    CREATE_NEW_STATION = 13;
    ADD_TO_HEOS_FAVORITES = 19;
    REMOVE_FROM_HEOS_FAVORITES = 20;
}

enum MediaType {
    artist = 0;
    album = 1;
    song = 2;
    genre = 3;
    container = 4;
    station = 5;
}

message Option {
    OptionId id = 1;
    string name = 2;
}

message GetVolumeResponse {
    Heos heos = 1;
}

message SetVolumeResponse {
    Heos heos = 1;
}

message VolumeUpResponse {
    Heos heos = 1;
}

message VolumeDownResponse {
    Heos heos = 1;
}

message MuteState {
    enum State {
        ON = 0;
        OFF = 1;
    }
}

message GetMuteResponse {
    Heos heos = 1;
}

message SetMuteResponse {
    Heos heos = 1;
}

message ToggleMuteResponse {
    Heos heos = 1;
}
